src/objects/Home_Page_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Settings used for the Home Page (Referral only as of 6/1/13)</description>
    <fields>
        <fullName>Cambridge_Chatter_Group_Id__c</fullName>
        <label>Cambridge Chatter Group Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cambridge_Chatter_Group_Label__c</fullName>
        <label>Cambridge Chatter Group Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CareMeridian_Chatter_Group_Id__c</fullName>
        <label>CareMeridian Chatter Group Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CareMeridian_Chatter_Group_Label__c</fullName>
        <label>CareMeridian Chatter Group Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESD_Chatter_Feed_ID__c</fullName>
        <description>ESD Chatter Group ID</description>
        <label>ESD Chatter Feed ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neuro_Chatter_Group_Id__c</fullName>
        <label>Neuro Chatter Group Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neuro_Chatter_Group_Label__c</fullName>
        <label>Neuro Chatter Group Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redwood_Chatter_Group_Label__c</fullName>
        <label>Redwood Chatter Group Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redwood_Chatter_ID__c</fullName>
        <description>Redwood Chatter Group ID</description>
        <label>Redwood Chatter ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Home Page Settings</label>
</CustomObject>